# cs4XX-EvolutionaryComputation

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: sphinx-build.yml
Evolutionary_Art/: scratch.rst
Report/: Report.tex
TSP_Assignment/: README.md
main/: objects.inv  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/student-projects/: description.doctree
main/_sources/student-projects/: description.rst.txt
main/assignments/pso/: pso.html
main/assignments/tsp/: tsp.html
main/outline/: outline.html
main/student-lectures/: description.html
main/student-lectures/Ant Colony Optimization/: Ant Colony Optimization.html
main/topics/genetic-algorithms/: n-queens-ga-experiment.html  n-queens-ga.html  simple-ga-experiment.html
main/topics/genetic-operators/: genetic-operators.html
main/topics/genetic-programming/: symbolic-regression-gp-experiment.html
main/topics/origin/: origin.html
main/topics/parameters/: comparing.html  tuning.html
main/topics/particle-swarm-optimization/: pso.html
main/topics/problems/: multi-objective.html  problems.html
resources/regression-data/: d0.csv  d01.csv  d02.csv  d03.csv  d04.csv  d05.csv  d06.csv  d07.csv  d08.csv  d09.csv  d10.csv  d11.csv  d12.csv  d13.csv  d14.csv  d15.csv  d16.csv  d17.csv  d18.csv  d19.csv
resources/tsp/: a280.json  berlin52.json  bier127.json  brd14051.json  ch130.json  ch150.json  d1291.json  d15112.json  d1655.json  d18512.json  d198.json  d2103.json  d493.json  d657.json  eil101.json  eil51.json  eil76.json  fl1400.json  fl1577.json  fl3795.json  fl417.json  fnl4461.json  gil262.json  kroA100.json  kroA150.json  kroA200.json  kroB100.json  kroB150.json  kroB200.json  kroC100.json  kroD100.json  kroE100.json  lin105.json  lin318.json  nrw1379.json  p654.json  pcb1173.json  pcb3038.json  pcb442.json  pr1002.json  (+37 more)
results/plots/: final_experiment_results.csv
site/: conf.py  index.html  index.rst
site/assignments/: tsp.rst
site/outline/: outline.rst
site/student-lectures/: description.rst  lecture-topics.rst
site/student-project/: description.rst
site/student-projects/: description.rst
source/: .buildinfo  genindex.html  index.html  searchindex.js
source/.doctrees/: environment.pickle
source/student-projects/: description.html
src/: ACO.py  crossover.py  cultural_algorithm.py  ga_max_bitstring.py  ga_n_queens.py  ga_tsp_problem.py  genetic_algorithm.py  gp_symbolic_regression.py  memetic_algorithm.py  mutation.py  neuroevolution.py  pso.py  selection.py  simple_ga_max_bitstring.py  simple_ga_max_number.py  tsp.py  visualize.py
src/console_scripts/: cli.py
test/: test_crossover.py  test_cultural_algorithm.py  test_ga_max_bitstring.py  test_ga_n_queens.py  test_gp_symbolic_regression.py  test_mutation.py  test_pso.py  test_selection.py  test_simple_ga_max_bitstring.py  test_simple_ga_max_number.py
(+94 files in other folders)
